# Praxos-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.lms.md  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt  zensical.toml
alembic/: env.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/scripts/: create_first_superuser.py  create_first_tier.py  create_tables.py  setup_initial_data.py
backend/src/infrastructure/: __init__.py  app_factory.py  dependencies.py  middleware.py
backend/src/infrastructure/auth/: __init__.py  constants.py  http_exceptions.py  routes.py  utils.py
backend/src/infrastructure/auth/oauth/: __init__.py  dependencies.py  factory.py  provider.py  schemas.py  services.py
backend/src/infrastructure/auth/oauth/providers/: __init__.py  github.py  google.py
backend/src/infrastructure/auth/session/: __init__.py  base.py  dependencies.py  manager.py  schemas.py  storage.py  user_agents_types.py
backend/src/infrastructure/auth/session/backends/: __init__.py  memcached.py  memory.py  redis.py
backend/src/infrastructure/cache/: __init__.py  base.py  decorator.py  exceptions.py  initialize.py  provider.py  utils.py
backend/src/infrastructure/cache/backends/: __init__.py  memcached.py  redis.py
backend/src/infrastructure/config/: __init__.py  enums.py  settings.py
backend/src/infrastructure/database/: __init__.py  models.py  session.py
backend/src/infrastructure/logging/: __init__.py  config.py  factory.py  formatters.py  handlers.py
backend/src/infrastructure/rate_limit/: __init__.py  base.py  exceptions.py  initialize.py  middleware.py  provider.py  utils.py
backend/src/infrastructure/rate_limit/backends/: __init__.py  memcached.py  redis.py
backend/src/infrastructure/security/: __init__.py  production_validator.py
backend/src/infrastructure/taskiq/: __init__.py  app.py  brokers.py  deps.py  registry.py  worker.py
backend/src/interfaces/: main.py
backend/src/interfaces/admin/: auth.py  initialize.py  mixins.py
backend/src/interfaces/admin/views/: __init__.py  tiers.py  users.py
backend/src/interfaces/api/v1/: __init__.py
backend/src/modules/: __init__.py
backend/src/modules/api_keys/: __init__.py  crud.py  dependencies.py  enums.py  models.py  routes.py  schemas.py  service.py  utils.py
backend/src/modules/common/: __init__.py  constants.py  exceptions.py  schemas.py
backend/src/modules/common/utils/: error_handler.py  logger.py
backend/src/modules/rate_limit/: __init__.py  crud.py  dependencies.py  models.py  routes.py  schemas.py  service.py
backend/src/modules/tier/: __init__.py  crud.py  dependencies.py  models.py  routes.py  schemas.py  service.py
backend/src/modules/user/: __init__.py  crud.py  dependencies.py  enums.py  models.py  routes.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/v1/users/: helpers.py  test_create.py  test_delete.py  test_read.py  test_update.py
backend/tests/integration/auth/: helpers.py  test_endpoints.py
backend/tests/unit/infrastructure/: test_middleware.py
backend/tests/unit/infrastructure/auth/oauth/: __init__.py  test_factory.py  test_provider.py  test_providers.py  test_services.py
backend/tests/unit/infrastructure/auth/session/: __init__.py  test_api.py  test_dependencies.py  test_manager.py  test_rate_limiting.py
backend/tests/unit/infrastructure/auth/session/backends/: __init__.py  test_memcached.py  test_redis.py
backend/tests/unit/infrastructure/cache/: test_decorator.py  test_integration.py  test_provider.py  test_utils.py
backend/tests/unit/infrastructure/cache/backends/: test_memcached.py  test_redis.py
backend/tests/unit/infrastructure/config/: test_settings.py
backend/tests/unit/infrastructure/database/: test_session.py
backend/tests/unit/infrastructure/logging/: test_correlation_id.py
backend/tests/unit/infrastructure/rate_limit/: test_fail_open_middleware.py  test_fail_open_provider.py  test_middleware.py  test_provider.py
backend/tests/unit/infrastructure/rate_limit/backends/: test_fail_open.py  test_memcached.py  test_redis.py
backend/tests/unit/infrastructure/security/: __init__.py  test_production_validator.py
backend/tests/unit/modules/api_keys/: test_service.py
backend/tests/unit/modules/common/: __init__.py  test_error_handler.py
cli/: README.md  pyproject.toml
cli/src/cli/: __init__.py  app.py  plugins.py
cli/src/cli/commands/: deploy.py  env.py
cli/src/cli/features/: __init__.py  base.py  installer.py  registry.py
cli/src/cli/features/_builtins/deploy/: feature.py
cli/src/cli/features/_builtins/deploy/templates/local/: docker-compose.yml.j2
cli/src/cli/features/_builtins/deploy/templates/nginx/: default.conf.j2  docker-compose.yml.j2
cli/src/cli/features/_builtins/deploy/templates/prod/: docker-compose.yml.j2
cli/src/cli/lib/: project.py  prompts.py  render.py
docs/: changelog.md  community.md  fastro-vs-fastroai.md  index.md
lms_app/: __init__.py  ai.py  auth.py  clerk_api.py  config.py  db.py  indexing.py  main.py  memory.py  models.py  plan.py  schemas.py  seed.py  workspace.py
tests_lms/: conftest.py  test_api.py  test_cohort_publish.py  test_indexing.py  test_invites_email.py  test_membership.py  test_scoring.py  test_sessions.py
(+55 files in other folders)
