# Workspace root.
#
# This file exists so `uv` recognizes the repo as a workspace and can resolve
# both the `backend/` (deployable application) and `cli/` (developer/operator
# tool) packages from a single venv. It is NOT a deployable package itself —
# nothing here ships to production.
#
# Most commands work from anywhere in the repo:
#
#     uv sync             # syncs the workspace (one venv shared by all members)
#     uv run bp ...       # runs the CLI from cli/, accessible from any cwd
#     uv run pytest       # runs the backend test suite
#
# To install `bp` machine-wide so it works outside this repo:
#
#     uv tool install --editable ./cli

[project]
name = "fastapi-boilerplate-workspace"
version = "0"
description = "Workspace root — see backend/ and cli/ for actual packages."
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["backend", "cli"]
