[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-boilerplate-cli"
version = "0.1.0"
description = "bp — developer/operator CLI for the FastAPI boilerplate. Hosts in-tree commands and discovers third-party plugins."
authors = [{ name = "Benav Labs", email = "contact@benav.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "fastapi-boilerplate",
]

[project.scripts]
bp = "cli.app:app"

[tool.uv.sources]
fastapi-boilerplate = { workspace = true }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.j2", "*.toml", "*.conf", "py.typed"]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
extend-select = ["UP006", "UP007", "UP035", "UP039", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["cli"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "infrastructure.*"
ignore_missing_imports = true
